<resources>
    <string name="app_name">D&amp;D</string>
    <string name="basic_rules">Basic Rules</string>
    <string name="players_handbook">Player´s Handbook</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server_ip">Server-IP</string>
    <string name="offline">Offline</string>
    <string name="settings">Settings</string>
    <string name="items">Items</string>
    <string name="finished">Finished</string>
    <string name="spells">Spells</string>
    <string name="monsters">Monsters</string>
    <string name="check_files">Checking Files</string>
    <string name="check_db">Checking main Database</string>
    <string name="light_armor">Light Armor</string>
    <string name="medium_armor">Medium Armor</string>
    <string name="heavy_armor">Heavy Armor</string>
    <string name="shield">Shield</string>
    <string name="melee_weapon">Melee Weapon</string>
    <string name="ranged_weapon">Ranged Weapon</string>
    <string name="ammunition">Ammunition</string>
    <string name="rod">Rod</string>
    <string name="staff">Staff</string>
    <string name="wand">Wand</string>
    <string name="ring">Ring</string>
    <string name="potion">Potion</string>
    <string name="scroll">Scroll</string>
    <string name="wondrous_item">Wondrous Item</string>
    <string name="wealth">Wealth</string>
    <string name="adventuring_gear">Adventuring Gear</string>
    <string name="name">Name</string>
    <string name="check_updates">Checking for Updates</string>
    <string name="unpacking">Unpacking</string>
    <string name="downloading_files">Downloading Files</string>
    <string name="sort">Sort by</string>
    <string name="item_types">Item Types</string>
    <string name="items_filter">Items - Filter</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="select_types">Select Types</string>
    <string name="types">Types</string>
    <string name="values">Values</string>
    <string name="type">Type</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="magic">Magic</string>
    <string name="value">Value</string>
    <string name="weight">Weight</string>
    <string name="school">School</string>
    <string name="duration">Duration</string>
    <string name="spells_filter">Spells - Filter</string>
    <string name="level">Level</string>
    <string name="spell_class">Class</string>
    <string name="transmutation">Transmutation</string>
    <string name="abjuration">Abjuration</string>
    <string name="conjuration">Conjuration</string>
    <string name="divination">Divination</string>
    <string name="enchantment">Enchantment</string>
    <string name="evocation">Evocation</string>
    <string name="illusion">Illusion</string>
    <string name="necromancy">Necromancy</string>
    <string name="sorcerer">Sorcerer</string>
    <string name="wizard">Wizard</string>
    <string name="warlock">Warlock</string>
    <string name="bard">Bard</string>
    <string name="druid">Druid</string>
    <string name="ranger">Ranger</string>
    <string name="cleric">Cleric</string>
    <string name="paladin">Paladin</string>
    <string name="only">Only</string>
    <string name="none">None</string>
    <string name="both">Both</string>
    <string name="v">V</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="ritual">Ritual</string>
    <string name="range">Range</string>
    <string name="unit">Unit</string>
    <string name="operation">Operation</string>
    <string name="range_value">Range Value</string>
    <string name="sources">Sources</string>
    <string name="installed">Installed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="books">Books</string>
    <string name="pdf_fragment">PDF Fragment</string>
    <string name="advanced">Advanced</string>
    <string name="monsters_filter">Monsters - Filter</string>
    <string name="schools">Schools</string>
    <string name="classes">Classes</string>
    <string name="alignment">Alignment</string>
    <string name="hp">HP</string>
    <string name="size">Size</string>
    <string name="sql_error">SQL Error, removing Filter...</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="INT">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="general">General</string>
    <string name="abilities">Abilities</string>
    <string name="saving_throws">Saving Throws</string>
    <string name="traits">Traits</string>
    <string name="actions">Actions</string>
    <string name="skills">Skills</string>
    <string name="details">Details</string>
</resources>
