<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"/>
        
        <CheckBox
            android:id="@+id/filter_spells_type_school_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abjuration"/>

        <CheckBox
            android:id="@+id/filter_spells_type_school_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conjuration"/>

        <CheckBox
            android:id="@+id/filter_spells_type_school_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divination"/>

        <CheckBox
            android:id="@+id/filter_spells_type_school_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enchantment"/>

        <CheckBox
            android:id="@+id/filter_spells_type_school_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evocation"/>

        <CheckBox
            android:id="@+id/filter_spells_type_school_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/illusion"/>

        <CheckBox
            android:id="@+id/filter_spells_type_school_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/necromancy"/>

        <CheckBox
            android:id="@+id/filter_spells_type_school_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transmutation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spell_class"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorcerer"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wizard"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warlock"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bard"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/druid"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ranger"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cleric"/>

        <CheckBox
            android:id="@+id/filter_spells_type_class_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paladin"/>

    </LinearLayout>

</ScrollView>