<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/part_search"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/sort_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <RadioButton
                android:id="@+id/sort_type_items_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <RadioButton
                android:id="@+id/sort_type_items_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"/>

        </RadioGroup>

        <RadioGroup
            android:id="@+id/sort_direction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <RadioButton
                android:id="@+id/sort_direction_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/asc"/>

            <RadioButton
                android:id="@+id/sort_direction_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>