<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:layout_weight="0.4"
                android:layout_gravity="center"/>

            <Spinner
                android:id="@+id/filter_spells_level_operation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:entries="@array/filter_operations"/>

            <EditText
                android:id="@+id/filter_spells_level_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:inputType="number"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/v"
            android:gravity="center"
            android:layout_marginTop="5dp"/>

        <RadioGroup
            android:id="@+id/filter_spells_v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/filter_spells_v_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only"
                android:layout_weight="0.33"/>

            <RadioButton
                android:id="@+id/filter_spells_v_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:layout_weight="0.34"/>

            <RadioButton
                android:id="@+id/filter_spells_v_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_weight="0.33"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:gravity="center"
            android:layout_marginTop="5dp"/>

        <RadioGroup
            android:id="@+id/filter_spells_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/filter_spells_s_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only"
                android:layout_weight="0.33"/>

            <RadioButton
                android:id="@+id/filter_spells_s_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:layout_weight="0.34"/>

            <RadioButton
                android:id="@+id/filter_spells_s_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_weight="0.33"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:gravity="center"
            android:layout_marginTop="5dp"/>

        <RadioGroup
            android:id="@+id/filter_spells_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/filter_spells_m_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only"
                android:layout_weight="0.33"/>

            <RadioButton
                android:id="@+id/filter_spells_m_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:layout_weight="0.34"/>

            <RadioButton
                android:id="@+id/filter_spells_m_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_weight="0.33"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ritual"
            android:gravity="center"
            android:layout_marginTop="5dp"/>

        <RadioGroup
            android:id="@+id/filter_spells_ritual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/filter_spells_ritual_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only"
                android:layout_weight="0.33"/>

            <RadioButton
                android:id="@+id/filter_spells_ritual_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"
                android:layout_weight="0.34"/>

            <RadioButton
                android:id="@+id/filter_spells_ritual_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_weight="0.33"/>

        </RadioGroup>

    </LinearLayout>
</ScrollView>